tests/miniJava/neg/000220_mutation.MiniJava
class java { public static void class ( String [ ] java ) { { } } }
